# arphi_driver

./: LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arphi_controllers/lib/arphi_controllers/: arphi_controller  enclosure_interface
install/arphi_controllers/share/arphi_controllers/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arphi_description/share/arphi_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arphi_gazebo/share/arphi_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arphi_interfaces/share/arphi_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/arphi_arduino_sketches/: arduino_uno_sketch.ino  config.yaml  teensy_sketch.ino
src/arphi_controllers/: package.xml  setup.cfg  setup.py
src/arphi_controllers/arphi_controllers/: AR4_interface.py  arphi_controller.py  enclosure_interface.py
src/arphi_description/: CMakeLists.txt  README.md  package.xml
src/arphi_description/config/: controllers.yaml
src/arphi_description/meshes/: link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
src/arphi_description/urdf/: arphi_gazebo.urdf.xacro  primary.urdf.xacro  your_robot.urdf
src/arphi_driver/config/: driver.yaml  joint_offsets.yaml
src/arphi_gazebo/: CMakeLists.txt  README.md
src/arphi_interfaces/: CMakeLists.txt  package.xml
src/arphi_interfaces/msg/: JointCommands.msg  StepperCommands.msg
src/arphi_moveit/: CMakeLists.txt  package.xml
src/arphi_moveit/config/: config.yaml  ompl_planning.yaml  pilz_planning.yaml
src/arphi_moveit/srdf/: arphi.srdf.xacro
src/arphi_moveit/urdf/: arphi.urdf.xacro
(+41 files in other folders)
