<package format="3">
  <name>arphi_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for the ARPHI, based on the URDF description of the Annin AR4 robot.
  </description>
  <license>MIT</license>

  <author>Dexter Ong</author>
  <author>Yifei Cheng</author>
  <author>Zachary Flynn</author>
  <maintainer email="zachary.flynn@mail.mcgill.ca">Zachary Flynn</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>